# extended-deltamap

./: .gitignore  AGENTS.md  HANDOFF.md  README.md  TODO.md  covariance.py  deltamap.py  dmatrix.py  functions.py  models.py  pyproject.toml  templates.py
examples/: DustSynch_var_9freq_ns8_trace_ncall20.ini  DustSynch_var_9freq_regionwise2_ns8_profile.ini  DustSynch_var_9freq_regionwise2_ns8_r1e-2.ini  DustSynch_var_9freq_regionwise2_ns8_trace_ncall20.ini  DustSynch_var_9freq_regionwise2_ns8_trace_ncall20_scalar.ini  DustSynch_var_9freq_regionwise2_profile.ini  DustSynch_var_9freq_regionwise2_r1e-2.ini  DustSynch_var_9freq_regionwise2_trace_ncall20.ini  DustSynch_var_9freq_regionwise_combinedk4_ns8_r1e-2.ini  DustSynch_var_9freq_regionwise_combinedk4_ns8_trace_ncall20.ini  DustSynch_var_9freq_regionwise_spatialk4_ns8_trace_ncall20.ini  Dust_var_4freq_r1e-2.ini  Dust_var_7freq_r1e-2.ini  Dust_var_7freq_regionwise2_ns8_r1e-2.ini  Dust_var_7freq_regionwise2_ns8_trace_ncall20.ini  Dust_var_7freq_regionwise2_ns8_trace_ncall20_scalar.ini  Dust_var_7freq_regionwise2_profile.ini  Dust_var_7freq_regionwise2_r1e-2.ini  Dust_var_7freq_regionwise2_trace_ncall20.ini  Dust_var_9freq_r1e-2.ini  Dust_var_9freq_r1e-2_anoise1.ini  Dust_var_9freq_r1e-2_order2.ini  Dust_var_9freq_r1e-2_order2_anoise1.ini  Dust_var_9freq_r1e-2_order2_fgnoise10.ini  Dust_var_9freq_r1e-2_order2_fgnoise2.ini  Dust_var_9freq_r1e-2_order2_fgnoise5.ini  Dust_var_9freq_r1e-2_sections.ini  LTD_config.ini  LTD_config_ns8.ini  LTD_config_sections.ini  Synch_var_3freq_r1e-2.ini  Synch_var_3freq_regionwise2_ns8_r1e-2.ini  (+7 more)
(+14 files in other folders)
